--- a/b/bu/bul/bulkpowders.co.uk.html
+++ b/b/bu/bul/bulkpowders.co.uk.html
@@ -1,13 +1,13 @@
-<!--The following is the downloaded HTML source of the bulkpowders.co.uk privacy policy that was archived on 2017-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170613085349id_/http%3A//help.bulkpowders.com/hc/en-gb/articles/207482929-Privacy-Policy-Data-Security) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bulkpowders.co.uk privacy policy that was archived on 2017-08-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170801092650id_/http%3A//help.bulkpowders.com/hc/en-gb/articles/207482929-Privacy-Policy-Data-Security) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html dir="ltr" lang="en-GB"><head>
   <meta charset="utf-8">
-  <!-- v12187 -->
+  <!-- v12513 -->
   <title>Privacy Policy &amp; Data Security – Help</title>
 
   <meta name="csrf-param" content="authenticity_token">
-<meta name="csrf-token" content="3ka6hrjY0LS3F73Yjr0fwjbfogyjn4lygLwR7DU1JlTeN+m4wRiY3EaDutZzNgngapUEYT7FjW+ALYs4NJciJg==">
+<meta name="csrf-token" content="bkMrk/NQDupyUnWI/rqWChh4Dneggsr7KJgbt1EHAe6NFR2K2VLSCZHpaE3U2TuYG75Ox7auODmRcnaP499XLw==">
   <meta name="description" content="BULK POWDERS™ Data Security How will you protect my data online? When you order with us, we ask for information such as your name, e-mail..."><meta property="og:image" content="http://p3.zdassets.com/hc/settings_assets/481276/200020441/F6r9h67wV1YXkCEad2XFlQ-bulk-powders-logo.svg">
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="Help">
@@ -20,7 +20,7 @@ When you order with us, we ask for information such as your name, e-mail address
 <link rel="alternate" hreflang="en" href="http://help.bulkpowders.com/hc/en-gb/articles/207482929-Privacy-Policy-Data-Security">
 
   <!-- Entypo pictograms by Daniel Bruce — www.entypo.com -->
-  <link rel="stylesheet" media="all" href="//p3.zdassets.com/hc/assets/application-c548261f0f8528925d2778d725e01631.css" id="stylesheet">
+  <link rel="stylesheet" media="all" href="//p3.zdassets.com/hc/assets/application-c1a66f34bace664826c9f39901872394.css" id="stylesheet">
   <link rel="stylesheet" type="text/css" href="//p3.zdassets.com/hc/themes/481276/200793302/style-8e489d85ea75750bb11e228a0e4d5708.css?brand_id=102781&amp;locale=en-gb">
 
   <link rel="shortcut icon" type="image/x-icon" href="//p3.zdassets.com/hc/settings_assets/481276/200020441/xwNPCxBri9VrmXV6HV2idw-favicon-96x96.png">
@@ -193,7 +193,7 @@ ga('send', 'pageview');
 <p>0800 085 2950</p>
 <p>Calls to 0800 numbers are free from landlines and UK mobile networks.</p><p></p>
       <strong class="display--block m-bottom--tiny">Office hours</strong>
-      <p>08:00 - 20:00 Monday to Friday<br>
+      <p>08:00 - 22:00 Monday to Friday<br>
 09:00 - 17:00 Saturday and Sunday</p>
       
       <a class="submit-a-request" href="/hc/en-gb/requests/new">Submit a request</a>
@@ -286,7 +286,7 @@ window.zEmbed||function(e,t){var n,o,d,i,s,a=[],r=document.createElement("iframe
 
   <!-- / -->
 
-  <script type="text/javascript" src="//p3.zdassets.com/hc/assets/locales/en-gb-d4f43f4f8476eab1a014091adc783def.js"></script>
+  <script type="text/javascript" src="//p3.zdassets.com/hc/assets/locales/en-gb-b568fe56034dc402658fed2e96eb2298.js"></script>
   <script src="https://bulkpowders.zendesk.com/auth/v2/host.js" data-brand-id="102781" data-return-to="http://help.bulkpowders.com/hc/en-gb/articles/207482929-Privacy-Policy-Data-Security" data-theme="hc" data-locale="1176" data-auth-origin="102781,true,false"></script>
   <script type="text/javascript" src="https://p3.zdassets.com/assets/zendesk_pci_hc.v4.js"></script>
 
@@ -304,10 +304,10 @@ window.zEmbed||function(e,t){var n,o,d,i,s,a=[],r=document.createElement("iframe
   HelpCenter = {};
   HelpCenter.account = {"subdomain":"bulkpowders","environment":"production","name":"BULK POWDERS"};
   HelpCenter.user = {"identifier":"da39a3ee5e6b4b0d3255bfef95601890afd80709","email":null,"name":null,"role":"anonymous","avatar_url":"https://assets.zendesk.com/hc/assets/default_avatar.png","organizations":[],"groups":[]};
-  HelpCenter.internal = {"asset_url":"//p3.zdassets.com/hc/assets/","current_session":{"locale":"en-gb","csrf_token":"ScHn9vGrxeNP9i/b1K2jE8O3sHQQfZIR02PaEigh2vlJsLTIiGuNi75iKNUpJrUxn/0WGY0nlgzT8kDGKYPeiw==","shared_csrf_token":null},"settings":{"zopim_enabled":true,"spam_filter_enabled":false},"current_record_id":"207482929","current_record_url":"/hc/en-gb/articles/207482929-Privacy-Policy-Data-Security","current_record_title":"Privacy Policy \u0026 Data Security","search_results_count":null,"current_text_direction":"ltr","current_brand_url":"https://bulkpowders.zendesk.com","current_host_mapping":"help.bulkpowders.com","current_path":"/hc/en-gb/articles/207482929-Privacy-Policy-Data-Security","authentication_domain":"https://bulkpowders.zendesk.com","show_autocomplete_breadcrumbs":true,"heap_analytics_id":null,"user_info_changing_enabled":false,"has_user_profiles_enabled":false,"has_anonymous_kb_voting":false,"has_advanced_upsell":false,"has_multi_language_help_center":true,"has_user_segments":false,"mobile_device":false,"mobile_site_enabled":true,"show_at_mentions":false,"has_copied_content":false,"embeddables_config":{"embeddables_web_widget":false,"embeddables_automatic_answers":false,"embeddables_connect_ipms":false},"plans_url":"http://help.bulkpowders.com/hc/admin/plan?locale=en-gb","manage_content_url":"http://help.bulkpowders.com/hc/en-gb","arrange_content_url":"http://help.bulkpowders.com/hc/admin/arrange_contents?locale=en-gb","general_settings_url":"http://help.bulkpowders.com/hc/admin/general_settings?locale=en-gb","user_segments_url":"http://help.bulkpowders.com/hc/admin/user_segments?locale=en-gb","has_community_enabled":false,"has_multiselect_field":false,"has_groups":true,"has_internal_sections":true,"has_organizations":true,"has_tag_restrictions":true,"has_answer_bot_enabled":false,"has_section_form_advanced_upsell":false};
+  HelpCenter.internal = {"asset_url":"//p3.zdassets.com/hc/assets/","current_session":{"locale":"en-gb","csrf_token":"3pa+L9C0KzoENDvyXjhpoaxp6AEReaeHlH1G4m2zshA9wIg2+rb32eePJjd0W8Qzr6+osQdVVUUtlyva32vk0Q==","shared_csrf_token":null},"settings":{"zopim_enabled":true,"spam_filter_enabled":false},"current_record_id":"207482929","current_record_url":"/hc/en-gb/articles/207482929-Privacy-Policy-Data-Security","current_record_title":"Privacy Policy \u0026 Data Security","search_results_count":null,"current_text_direction":"ltr","current_brand_url":"https://bulkpowders.zendesk.com","current_host_mapping":"help.bulkpowders.com","current_path":"/hc/en-gb/articles/207482929-Privacy-Policy-Data-Security","authentication_domain":"https://bulkpowders.zendesk.com","show_autocomplete_breadcrumbs":true,"heap_analytics_id":null,"user_info_changing_enabled":false,"has_user_profiles_enabled":false,"has_anonymous_kb_voting":false,"has_advanced_upsell":false,"has_multi_language_help_center":true,"has_user_segments":true,"mobile_device":false,"mobile_site_enabled":true,"show_at_mentions":false,"has_copied_content":false,"embeddables_config":{"embeddables_web_widget":false,"embeddables_automatic_answers":false,"embeddables_connect_ipms":false},"plans_url":"http://help.bulkpowders.com/hc/admin/plan?locale=en-gb","manage_content_url":"http://help.bulkpowders.com/hc/en-gb","arrange_content_url":"http://help.bulkpowders.com/hc/admin/arrange_contents?locale=en-gb","general_settings_url":"http://help.bulkpowders.com/hc/admin/general_settings?locale=en-gb","user_segments_url":"http://help.bulkpowders.com/hc/admin/user_segments?locale=en-gb","has_community_enabled":false,"has_multiselect_field":false,"has_groups":true,"has_internal_sections":true,"has_organizations":true,"has_tag_restrictions":true,"has_answer_bot_web_form":false,"billing_url":"/access/return_to?return_to=https://bulkpowders.zendesk.com/billing","has_answer_bot_management":false,"answer_bot_management_url":"http://help.bulkpowders.com/hc/admin/answer_bot?locale=en-gb","is_account_owner":false,"guide_plan_state":"plan_legacy"};
 </script>
 
-  <script src="//p3.zdassets.com/hc/assets/hc_enduser-ba2573900ebfc46912de.js"></script>
+  <script src="//p3.zdassets.com/hc/assets/hc_enduser-52990fe773805a1d4bee.js"></script>
   
 
   <script type="text/javascript">
