--- a/o/of/off/office-converter.com.html
+++ b/o/of/off/office-converter.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the office-converter.com privacy policy that was archived on 2017-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170620212649id_/http%3A//www.office-converter.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the office-converter.com privacy policy that was archived on 2017-08-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170803110531id_/https%3A//www.office-converter.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
     <meta name="google-site-verification" content="7tXM3gZ2MSBqBMzliVrYzzdYKnRML1YAd57UQDXGykc">
@@ -123,7 +123,7 @@ PSP, RM10, RM20, SWF, MWV, WebM, M1V, M2V, VCD, DVD, Android, Blackberry, iPad, 
            <div class="span12">
                 <nav id="menu" class="clearfix">
                     <ul>
-                        <li class="current"><a href="http://office-converter.com"><span class="name">Home</span></a></li>
+                        <li class="current"><a href="http://www.office-converter.com"><span class="name">Home</span></a></li>
                         <li><a href="Online-Document-Converter"><span class="name">Document</span></a></li>
                         <li><a href="Online-Video-Converter"><span class="name">Video</span></a></li>
                         <li><a href="Online-Audio-Converter"><span class="name">Audio</span></a></li>
@@ -270,7 +270,7 @@ Free users can not enter your email address online conversion. When the user is 
                 <a class="logo-img" href="" title="Office Converter"><img src="Office-Converter/OfficeConverter.png" alt="Free Online File Converter"></a>
 </p>
                 <address>
-                    <p><a href="http://office-converter.com"><i class="icon-home"></i> Home</a></p>
+                    <p><a href="http://www.office-converter.com"><i class="icon-home"></i> Home</a></p>
                     <p><a href="Register"><i class="icon-briefcase"></i> Register</a></p>
                     <p><a href="FAQ"><i class="icon-comments"></i> FAQ</a></p>
                     <p><i class="icon-mail-3"></i> <a href="mailto:support@free-converter.com">support<img src="Office-Converter/email.png">office-converter.com</a></p>
@@ -315,7 +315,7 @@ Free users can not enter your email address online conversion. When the user is 
             </div>
             <div class="span4 pull-right hidden-phone">
                 <ul class="pull-right">
-                    <li><a href="http://office-converter.com">Home</a></li>
+                    <li><a href="http://www.office-converter.com">Home</a></li>
                     <li><a href="officeconverter.xml">XML</a></li>
                     <li><a href="privacy-policy">Privacy Policy</a></li>
                     <li><a href="Sitemap">Sitemap</a></li>
@@ -332,7 +332,7 @@ Free users can not enter your email address online conversion. When the user is 
 
 </div>
 <a onclick="javascript:history.go(-1);" id="toBack" class="visible-phone" style="display: inline;">Back</a>
-<a href="http://office-converter.com" id="toHome" class="visible-phone" style="display: inline;">Home</a>
+<a href="http://www.office-converter.com" id="toHome" class="visible-phone" style="display: inline;">Home</a>
 <a id="totopok" class="visible-phone" style="display: inline;">To Top</a>
 <a data-toggle="modal" href="#buyformats" id="toBuy" class="visible-phone" style="display: inline;">Buy</a>
 <script>
