--- a/b/bi/bit/bitoffun.com.html
+++ b/b/bi/bit/bitoffun.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bitoffun.com privacy policy that was archived on 2017-05-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170523052200id_/http%3A//www.bitoffun.com/bof-privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bitoffun.com privacy policy that was archived on 2017-08-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170809064827id_/http%3A//www.bitoffun.com/bof-privacy-policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -11,7 +11,55 @@
 <link rel="shortcut icon" type="image/ico" href="http://www.bitoffun.com/favicon.ico">
 <meta http-equiv="Content-Script-Type" content="text">
 <meta http-equiv="Content-Style-Type" content="text/css">
-<style type="text/css" media="screen,tv">body{margin:0 auto;background-image:url('images/bg-blu20.png');background-repeat:repeat-x;background-attachment:fixed;font-family:Arial,Helvetica,FreeSans,URW Gothic L;text-align:center;font-size:1em;color:#123;background-color:#445577;}#masthead{margin:0 auto;max-width:100%;height:auto;text-align:center;clear:both;}#nav{margin:0 auto;width:990px;max-width:100%;height:auto;font-size:1.188em;color:#fff;text-align:center;background:url('images/nav-sprite990f.png');background-position:-0px -35px;clear:both;}#nav a:hover,#nav a:active{color:#fff;}.navspacer{margin:0 auto;width:50px;max-width:100%;display:inline;color:#aac;text-align:center;}.navbox1,.navbox1 a,.navbox1 a:visited{margin:0 auto;height:35px;width:48px;color:#eef;padding:4px 0 0 0;display:inline-block;}.navbox1:hover{width:48px;background:url('images/nav-sprite990f.png');background-position:-470px -0px;}.navbox2,.navbox2 a,.navbox2 a:visited{margin:0 auto;height:35px;width:72px;color:#eef;padding:4px 0 0 0;display:inline-block;}.navbox2:hover{width:72px;background:url('images/nav-sprite990f.png');background-position:-398px -0px;}.navbox3,.navbox3 a,.navbox3 a:visited{margin:0 auto;height:35px;width:96px;color:#eef;padding:4px 0 0 0;display:inline-block;}.navbox3:hover{width:96px;background:url('images/nav-sprite990f.png');background-position:-302px -0px;}.navbox4,.navbox4 a,.navbox4 a:visited{margin:0 auto;height:35px;width:120px;color:#eef;padding:4px 0 0 0;display:inline-block;}.navbox4:hover{width:120px;background:url('images/nav-sprite990f.png');background-position:-182px -0px;}.navbox5,.navbox5 a,.navbox5 a:visited{margin:0 auto;height:35px;width:132px;color:#eef;padding:4px 0 0 0;display:inline-block;}.navbox5:hover{width:132px;background:url('images/nav-sprite990f.png');background-position:-50px -0px;}#precontainer{margin:0 auto;width:990px;max-width:100%;height:1em;background-image:url('images/bg_bluelite990c.png');background-position:-0px -0px;}#container{margin:0 auto;width:990px;max-width:100%;height:auto;background-image:url('images/bg_bluelite990c.png');background-position:-990px -0px;background-repeat:repeat-y;background-color:#eef;}.content{margin:0 auto;padding:2%;max-width:96%;}.text{max-width:80%;text-align:left;}img{max-width:100%;height:auto;}@media \0screen {img{width:auto;}}.featurelist{margin:0 auto;padding:0 6% 0 4%;width:780px;max-width:92%;clear:both;}.featurelist img{float:left;max-width:100%;height:auto;margin:1px 3% 1px 3%;}.featurelist cite{font-size:1em;font-weight:bold;}.featurelist cite a,.featurelist cite a:visited{decoration:none;color:#123;}.featurelist cite a:hover,.featurelist cite a:active{decoration:none;color:#579;}.featurelist p{margin:0 auto;font-size:1.125em;text-align:left;max-width:90%;}.feature{margin:1px 1% 1px 1%;max-width:96%;}.hr,.hr-b{margin:0 auto;padding:3px 0;width:720px;height:1px;background-repeat:no-repeat;clear:both;background-image:url('images/hr-opc-b.png');}.image_style1{border-style:none;}h1,h1 a,h1 a:visited{margin:0;padding:8px 0;font-family:"Arial Rounded MT Bold",Arial,Helvetica,FreeSans,URW Gothic L;font-size:1.75em;text-align:center;text-transform:capitalize;font-weight:bold;color:#123;}h2,h2 a,h2 a:visited{margin:0;padding:6px 0;font-family:"Arial Rounded MT Bold",Arial,Helvetica,FreeSans,URW Gothic L;font-size:1.375em;text-align:center;text-transform:capitalize;font-weight:bold;color:#123;}h1 a:hover,h2 a:hover{color:#357;}ol,ul,li{line-height:22px;}a{text-decoration:none;color:#123;}a:visited{color:#567;}.style1,.style1 a,.style1 a visited{color:#a23;}.lft{text-align:left;}.rgt{text-align:right;}.bold{font-weight:bold;}.fsz12{font-size:.75em;}.fsz14{font-size:.875em;}.fsz18{font-size:1.125em;}#subcontainer{margin:0 auto;width:990px;max-width:100%;height:1.28em;background-image:url('images/bg_bluelite990c.png');background-position:-0px -16px;}#footer,#footer a,#footer a:visited{color:#ccc;font-size:.875em;max-width:100%;}a:link,a:visited{text-decoration:none;}a:active,a:hover{color:#357;}</style>
+<style type="text/css" media="screen,tv">
+body{margin:0 auto;background-image:url('images/bg-blu20.png');background-repeat:repeat-x;background-attachment:fixed;font-family:Arial,Helvetica,FreeSans,URW Gothic L;text-align:center;font-size:1em;color:#123;background-color:#445577;}
+#masthead{margin:0 auto;max-width:100%;height:auto;text-align:center;clear:both;}
+#nav{margin:0 auto;width:990px;max-width:100%;height:auto;font-size:1.188em;color:#fff;text-align:center;background:url('images/nav-sprite990f.png');background-position:-0px -35px;clear:both;}
+#nav a:hover,#nav a:active{color:#fff;}
+.navspacer{margin:0 auto;width:50px;max-width:100%;display: inline;color:#aac;text-align:center;}
+.navbox1,.navbox1 a,.navbox1 a:visited {margin:0 auto;height:35px;width:48px;color:#eef;padding:4px 0 0 0;display: inline-block;}
+.navbox1:hover{width:48px;background:url('images/nav-sprite990f.png');background-position:-470px -0px;}
+.navbox2,.navbox2 a,.navbox2 a:visited {margin:0 auto;height:35px;width:72px;color:#eef;padding:4px 0 0 0;display: inline-block;}
+.navbox2:hover{width:72px;background:url('images/nav-sprite990f.png');background-position:-398px -0px;}
+.navbox3,.navbox3 a,.navbox3 a:visited {margin:0 auto;height:35px;width:96px;color:#eef;padding:4px 0 0 0;display: inline-block;}
+.navbox3:hover{width:96px;background:url('images/nav-sprite990f.png');background-position:-302px -0px;}
+.navbox4,.navbox4 a,.navbox4 a:visited {margin:0 auto;height:35px;width:120px;color:#eef;padding:4px 0 0 0;display: inline-block;}
+.navbox4:hover{width:120px;background:url('images/nav-sprite990f.png');background-position:-182px -0px;}
+.navbox5,.navbox5 a,.navbox5 a:visited {margin:0 auto;height:35px;width:132px;color:#eef;padding:4px 0 0 0;display: inline-block;}
+.navbox5:hover{width:132px;background:url('images/nav-sprite990f.png');background-position:-50px -0px;}
+#precontainer{margin:0 auto;width:990px;max-width:100%;height:1em;background-image:url('images/bg_bluelite990c.png');background-position:-0px -0px;}
+#container{margin:0 auto;width:990px;max-width:100%;height:auto;background-image:url('images/bg_bluelite990c.png');background-position:-990px -0px;background-repeat:repeat-y;background-color:#eef;}
+.content{margin:0 auto;padding:2%;max-width:96%;}
+.text{max-width:80%;text-align:left;}
+img {max-width:100%;height: auto;}
+@media \0screen { img { width: auto; /* for ie 8 */ }}
+.featurelist{margin:0 auto;padding:0 6% 0 4%;width:780px;max-width:92%;clear: both;}
+.featurelist img {float:left;max-width:100%;height:auto;margin: 1px 3% 1px 3%;}
+.featurelist cite {font-size:1em;font-weight: bold;}
+.featurelist cite a,.featurelist cite a:visited{decoration:none;color:#123;}
+.featurelist cite a:hover,.featurelist cite a:active{decoration:none;color:#579;}
+.featurelist p {margin:0 auto;font-size:1.125em;text-align:left;max-width: 90%;}
+.feature{margin: 1px 1% 1px 1%;max-width:96%;}
+.hr,.hr-b{margin:0 auto;padding:3px 0;width:720px;height:1px;background-repeat:no-repeat;clear:both;background-image:url('images/hr-opc-b.png');}
+.image_style1{border-style:none;}
+h1,h1 a,h1 a:visited{margin:0;padding:8px 0;font-family:"Arial Rounded MT Bold",Arial,Helvetica,FreeSans,URW Gothic L;font-size:1.75em;text-align:center;text-transform:capitalize;font-weight:bold;color:#123;}
+h2,h2 a,h2 a:visited{margin:0;padding:6px 0;font-family:"Arial Rounded MT Bold",Arial,Helvetica,FreeSans,URW Gothic L;font-size:1.375em;text-align:center;text-transform:capitalize;font-weight:bold;color:#123;}
+h1 a:hover,h2 a:hover{color:#357;}
+ol,ul,li{line-height:22px;}
+a{text-decoration:none;color:#123;}
+a:visited{color:#567;}
+.style1,.style1 a,.style1 a visited{color:#a23;}
+.lft{text-align:left;}
+.rgt{text-align:right;}
+.bold{font-weight:bold;}
+.fsz12{font-size:.75em;}
+.fsz14{font-size:.875em;}
+.fsz18{font-size:1.125em;}
+#subcontainer{margin:0 auto;width:990px;max-width:100%;height:1.28em;background-image:url('images/bg_bluelite990c.png');background-position:-0px -16px;}
+#footer,#footer a,#footer a:visited{color:#ccc;font-size:.875em;max-width: 100%;}
+a:link,a:visited{text-decoration:none;}
+a:active,a:hover{color:#357;}
+</style>
 <script async="" src="//www.google-analytics.com/analytics.js"></script><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
