--- a/i/in/inv/investingwithpassion.com.html
+++ b/i/in/inv/investingwithpassion.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the investingwithpassion.com privacy policy that was archived on 2016-10-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161021231711id_/http%3A//investingwithpassion.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the investingwithpassion.com privacy policy that was archived on 2017-08-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170809122718id_/http%3A//investingwithpassion.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en-US"><head><script type="text/javascript" src="https://rex.adequant.com/static/js/prebid.min.js?"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -137,11 +137,11 @@ _atrk_opts = { atrk_acct:"4/1Gl1aAFUE0Ug", domain:"investingwithpassion.com",dyn
 		font-size:12px !important;
 	}
 	</style>
-	<link rel="dns-prefetch" href="http://www.google-analytics.com">
-<link rel="dns-prefetch" href="http://fonts.googleapis.com">
-<link rel="dns-prefetch" href="http://code.jquery.com">
-<link rel="dns-prefetch" href="http://yoast.com">
-<link rel="dns-prefetch" href="http://ajax.googleapis.com">
+	<link rel="dns-prefetch" href="//www.google-analytics.com">
+<link rel="dns-prefetch" href="//fonts.googleapis.com">
+<link rel="dns-prefetch" href="//code.jquery.com">
+<link rel="dns-prefetch" href="//yoast.com">
+<link rel="dns-prefetch" href="//ajax.googleapis.com">
 <script type="text/javascript">
 //NOTE: only provides benefits for script initiated requests
 var dmn = window.location.hostname.replace('www.', '').replace('featured.','');
@@ -152,9 +152,9 @@ document.write('<link rel="dns-prefetch" href="//c2snj.'    +dmn+'">');
 document.write('<link rel="dns-prefetch" href="//relecart.' +dmn+'">');
 document.write('<link rel="dns-prefetch" href="//video.'    +dmn+'">');
 
-var query_url = "http://relecart." + dmn + "/relecart/getc?u=gvcFSlPZEd-m8wDggU4-hg&k=orig&d="+dmn+"&s=widesky&f=val_widesky&rnd=" + Math.random(); //see tools.js
+var query_url = "//relecart." + dmn + "/relecart/getc?u=gvcFSlPZEd-m8wDggU4-hg&k=orig&d="+dmn+"&s=widesky&f=val_widesky&rnd=" + Math.random(); //see tools.js
 document.write('<sc'+'ript type="text/javascript" src="' + query_url + '"></sc' + 'ript>');
-</script><link rel="dns-prefetch" href="//dspimp.web.archive.org"><link rel="dns-prefetch" href="//c2snj.web.archive.org"><link rel="dns-prefetch" href="//relecart.web.archive.org"><link rel="dns-prefetch" href="//video.web.archive.org"><script type="text/javascript" src="http://relecart.web.archive.org/relecart/getc?u=gvcFSlPZEd-m8wDggU4-hg&amp;k=orig&amp;d=web.archive.org&amp;s=widesky&amp;f=val_widesky&amp;rnd=0.9915809603460197"></script>
+</script><link rel="dns-prefetch" href="//dspimp.web.archive.org"><link rel="dns-prefetch" href="//c2snj.web.archive.org"><link rel="dns-prefetch" href="//relecart.web.archive.org"><link rel="dns-prefetch" href="//video.web.archive.org"><script type="text/javascript" src="//relecart.web.archive.org/relecart/getc?u=gvcFSlPZEd-m8wDggU4-hg&amp;k=orig&amp;d=web.archive.org&amp;s=widesky&amp;f=val_widesky&amp;rnd=0.9366502571475004"></script>
 
 <link rel="icon" type="image/png" href="/favicon.png">
 
@@ -200,15 +200,15 @@ switch(path) {
 }
 </script>
 
-<script type="text/javascript" src="/js/under?t=propellerads1"></script><script type="text/javascript" src="//web.archive.org/web/20161021170159/http://go.oclasrv.com/apu.php?zoneid=670164"></script>
+<!--script type='text/javascript' src='/js/under?t=propellerads1'></script-->
 
-<script type="text/javascript" src="/js/inimg"></script>
+<!--script type='text/javascript' src='/js/inimg'></script-->
 
 
-<style>#fp_adop_pixel>object{height:1px;width:1px;}</style><script async="" src="https://web.archive.org/web/20160802214821/http://static.websking.com/static/js/advertisement.js"></script></head>
+<style>#fp_adop_pixel>object{height:1px;width:1px;}</style><script async="" src="https://web.archive.org/web/20171015211205/http://c2snj.websking.com/static/js/advertisement.js"></script></head>
 
 <body>
-<script type="text/javascript" src="/js/ipq.js"></script>
+<script type="text/javascript" src="/js/ipq.js?dor=yes"></script>
 <img src="/metricsn.gif" style="float:left;height:0px; width:0px;">
 <!--script type="text/javascript">
 document.write('<ifr'+'ame id="iaspxl" src="/ias?nb='+(new Date()).getTime()+'" height="1" width="1" style="float:left;height:1px;width:1px;background-color:transparent;" scrolling="no" frameborder="0" allowtransparency="true"><\/ifr'+'ame>');
@@ -221,7 +221,7 @@ document.write('<ifr'+'ame id="iaspxl" src="/ias?nb='+(new Date()).getTime()+'" 
 
 <div class="header_right_side">
 
-<p class="hideobject">Friday, Oct. 21, 2016</p>
+<p class="hideobject">Wednesday, Aug. 9, 2017</p>
 
 <span class="timestamp hideobject"><script type="text/javascript" language="JavaScript"><!--
 user_time();
@@ -316,7 +316,7 @@ var slot1 = 'VPOS';
 var dmn_tmp = window.location.hostname;
 var query_url = "http://relecart.relestar.com/relecart/getc?u=gvcFSlPZEd-m8wDggU4-hg&k=orig&d=" + dmn_tmp + "&s=" + slot1 + "&f=val_" + slot1 + "&rnd=" + Math.random();
 document.write('<sc'+'ript type="text/javascript" src="' + query_url + '"></sc' + 'ript>');
-</script><script type="text/javascript" src="http://relecart.relestar.com/relecart/getc?u=gvcFSlPZEd-m8wDggU4-hg&amp;k=orig&amp;d=web.archive.org&amp;s=VPOS&amp;f=val_VPOS&amp;rnd=0.631327256391043"></script>
+</script><script type="text/javascript" src="http://relecart.relestar.com/relecart/getc?u=gvcFSlPZEd-m8wDggU4-hg&amp;k=orig&amp;d=web.archive.org&amp;s=VPOS&amp;f=val_VPOS&amp;rnd=0.6435698935534235"></script>
 
 <script type="text/javascript">
 if (document.cookie.indexOf('cqc') < 0 ) 
@@ -541,7 +541,7 @@ if (rele_cookie.get('cqc')) {
 
 </div><!-- #container -->
 
-</div><div id="ipq" style="height: 1px; width: 1px; position: absolute; top: -1px; left: -2000px; overflow: hidden; line-height: 0px; font-size: 0px;"><iframe id="ipqe" src="https://web.archive.org/web/20160802214821/http://dspimp.websking.com/static/html/end.html?s=web.archive.org&amp;z=unknown" style="height:1px;width:1px;position:absolute;top:-1px;left:-2000px;overflow:hidden;line-height:0px;font-size:0px;" width="1" height="1" scrolling="no" frameborder="0"></iframe></div><!-- #center -->
+</div><div id="ipq" style="height: 1px; width: 1px; position: absolute; top: -1px; left: -2000px; overflow: hidden; line-height: 0px; font-size: 0px;"><iframe id="ipqe" src="https://web.archive.org/web/20171015211205/http://dspimp.websking.com/static/html/end.html?s=web.archive.org&amp;z=unknown" style="height:1px;width:1px;position:absolute;top:-1px;left:-2000px;overflow:hidden;line-height:0px;font-size:0px;" width="1" height="1" scrolling="no" frameborder="0"></iframe></div><!-- #center -->
 
 <div id="footer_holder" class="hideobject">
 
@@ -575,7 +575,7 @@ if (rele_cookie.get('cqc')) {
 
 <div class="copyright">
 
-<div class="left">© 2016 Investing With Passion All Rights Reserved.</div><!-- #left -->
+<div class="left">© 2017 Investing With Passion All Rights Reserved.</div><!-- #left -->
 
 <div class="right">
 					<ul id="menu-footer-menu" class="footer-menu"><li id="menu-item-21705" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-21705"><a href="http://investingwithpassion.com/contact-us/">Contact Us</a></li>
@@ -610,14 +610,14 @@ var _wpcf7 = {"loaderUrl":"http:\/\/investingwithpassion.com\/wp-content\/plugin
 var slot1 = 'LB',
 query_url;
 
-query_url = "http://relecart." + dmn + "/relecart/get?u=gvcFSlPZEd-m8wDggU4-hg&k=orig&d=" + dmn + "&s=" + slot1 + "&f=val_" + slot1 + "&rnd=" + Math.random();
+query_url = "//relecart." + dmn + "/relecart/get?u=gvcFSlPZEd-m8wDggU4-hg&k=orig&d=" + dmn + "&s=" + slot1 + "&f=val_" + slot1 + "&rnd=" + Math.random();
 document.write('<sc'+'ript type="text/javascript" src="' + query_url + '"></sc' + 'ript>');
 //TODO: Change to use getc and recreate the weight function so we only have to run one external query.
 
 var slot2 = 'LBorg';
-query_url = "http://relecart." + dmn + "/relecart/getc?u=gvcFSlPZEd-m8wDggU4-hg&k=orig&d=" + dmn + "&s=" + slot2 + "&f=val_" + slot2 + "&rnd=" + Math.random();
+query_url = "//relecart." + dmn + "/relecart/getc?u=gvcFSlPZEd-m8wDggU4-hg&k=orig&d=" + dmn + "&s=" + slot2 + "&f=val_" + slot2 + "&rnd=" + Math.random();
 document.write('<sc'+'ript type="text/javascript" src="' + query_url + '"></sc' + 'ript>');
-</script><script type="text/javascript" src="http://relecart.web.archive.org/relecart/get?u=gvcFSlPZEd-m8wDggU4-hg&amp;k=orig&amp;d=web.archive.org&amp;s=LB&amp;f=val_LB&amp;rnd=0.8601637743267032"></script><iframe src="//mt.rtmark.net/pp?geo=US&amp;zoneid=670164&amp;oaid=3cce5a762702d9c5fd807d5228d216e7&amp;ftz=0&amp;aid=0&amp;nls=0&amp;ltm=1&amp;frl=0&amp;rtg=1" style="display: none;"></iframe><script type="text/javascript" src="http://relecart.web.archive.org/relecart/getc?u=gvcFSlPZEd-m8wDggU4-hg&amp;k=orig&amp;d=web.archive.org&amp;s=LBorg&amp;f=val_LBorg&amp;rnd=0.43738416438321437"></script>
+</script><script type="text/javascript" src="//relecart.web.archive.org/relecart/get?u=gvcFSlPZEd-m8wDggU4-hg&amp;k=orig&amp;d=web.archive.org&amp;s=LB&amp;f=val_LB&amp;rnd=0.9886700830023443"></script><script type="text/javascript" src="//relecart.web.archive.org/relecart/getc?u=gvcFSlPZEd-m8wDggU4-hg&amp;k=orig&amp;d=web.archive.org&amp;s=LBorg&amp;f=val_LBorg&amp;rnd=0.8053359418193426"></script>
 
 <script type="text/javascript" src="/js/extensions.js"></script>
 
